[package]
name = "tokenlock-accounts"
version = "0.1.0"
description = "Solana Tokenlock program accounts"
license = "MIT License"
edition = "2021"

[features]
test-sbf = []

[dependencies]
anchor-lang = "0.30.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
