[package]
name = "access-control"
version = "0.1.0"
description = "Access Control for Solana Programs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "access_control"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1" }
anchor-spl = { version = "0.30.1" }
spl-transfer-hook-interface = "0.6.3"
spl-tlv-account-resolution = "0.6.3"
num_enum = "0.7.2"
tokenlock-accounts = { path = "../../libraries/tokenlock-accounts" }
