[package]
name = "dividends"
version = "0.1.0"
description = "Dividends are based on Merkle tree distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dividends"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1" }
anchor-spl = { version = "0.30.1" }
