[package]
name = "security-transfer-hook"
version = "0.1.0"
description = "The security transfer hook program which checks permission for transfer groups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "security_transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["interface-instructions"] }
anchor-spl = "0.30.0"
spl-transfer-hook-interface = { version = "0.6.3" }
transfer-restrictions = { path = "../transfer-restrictions", features = ["cpi"] }