[package]
name = "tokenlock"
version = "0.1.1"
description = "Vesting lockups for SPL tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokenlock"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
hex = "0.4.3"
solana-program = "1.18.15"
sha2 = "0.10.2"
access-control = { path = "../access-control", features = ["cpi"] }

[dev-dependencies]
spl-token-2022 = {version = "3.0.0", features = ["no-entrypoint"]}
solana-sdk = "1.18.15"
solana-program-test = "1.18.15"
solana-program = "1.18.15"
