[package]
name = "transfer-restrictions"
version = "0.1.0"
description = "Transfer restrictions for Solana tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_restrictions"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0" }
anchor-spl = { version = "0.30.0" }
spl-transfer-hook-interface = { version = "0.6.3" }
num_enum = "0.7.2"
