[package]
name = "transfer-restrictions"
version = "0.1.0"
description = "Transfer restrictions for Solana tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_restrictions"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["interface-instructions"] }
anchor-spl = { version = "0.30.1" }
spl-transfer-hook-interface = "0.6.5"
spl-tlv-account-resolution = "0.6.5"
num_enum = "0.7.2"
access-control = { path = "../access-control", features = ["cpi"] }
tokenlock-accounts = { path = "../../libraries/tokenlock-accounts" }
